--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>Shadowsocks elementaryOS/Ubuntu（也许可以） 客户端（指示器）。</p>
 
 <h2>
-<a id="载图" class="anchor" href="#%E8%BD%BD%E5%9B%BE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>载图</h2>
+<a id="截图" class="anchor" href="#%E6%88%AA%E5%9B%BE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>截图</h2>
 
 <p><img src="https://raw.githubusercontent.com/Simpleyyt/shadowsocks-eos/master/screenshot/screenshot.png" alt=""></p>
 
