Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
 <h2>
 <a id="安装" class="anchor" href="#%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装</h2>
 
-<p>首先必须先安装<code>shadowsocks-libev</code>与<code>gfwlist2pac</code>。</p>
+<p>首先必须先安装<code>shadowsocks-libev</code>与<code>gfwlist2pac</code>，<code>gfwlist2pac</code>可以通过<code>pip</code>安装：</p>
 
-<p><code>shadowsocks-libev</code>的安装参考：<a href="https://github.com/shadowsocks/shadowsocks-libev">https://github.com/shadowsocks/shadowsocks-libev</a>。</p>
-
-<p><code>gfwlist2pac</code>可以通过<code>pip</code>安装。</p>
+<div class="highlight highlight-source-shell"><pre>sudo pip install shadowsocks gfwlist2pac</pre></div>
 
 <p>然后，下载 Shadowsocks 的 deb 包进行安装：<a href="https://github.com/simpleyyt/shadowsocks-eos/releases">https://github.com/simpleyyt/shadowsocks-eos/releases</a>。</p>
 
