Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h2>
 <a id="安装" class="anchor" href="#%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装</h2>
 
-<p>首先必须先安装<code>shadowsocks-libev</code>与<code>gfwlist2pac</code>，<code>gfwlist2pac</code>可以通过<code>pip</code>安装：</p>
+<p>首先必须先安装<code>shadowsocks</code>与<code>gfwlist2pac</code>，可以通过<code>pip</code>安装：</p>
 
 <div class="highlight highlight-source-shell"><pre>sudo pip install shadowsocks gfwlist2pac</pre></div>
 
